--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,4 @@
-echo [build] > netlify.toml
-echo publish = "." >> netlify.toml
-echo [[redirects]] >> netlify.toml
-echo from = "/*" >> netlify.toml
-echo to = "/index.html" >> netlify.toml
-echo status = 200 >> netlify.toml
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
